--- a/Data-Structures C#-Fundamentals/Exams/02.LegionSystem/02.LegionSystem.csproj
+++ b/Data-Structures C#-Fundamentals/Exams/02.LegionSystem/02.LegionSystem.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>_02.LegionSystem</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Magnum" Version="2.1.3" />
+  </ItemGroup>
+
 </Project>
